# My-application

./: .gitignore  NOTICE~
spaceProjectAssignment1/: CMakeLists.txt  CartesianResults AE4499_2017_1_4614399.txt.txt  CartesianResults AE4499_2017_2_4614399.txt.txt  assignmentPartC_Verification.cpp  assignmentPartDE_MissionToPlanet.cpp  assignmentPartF_SampleReturnMission.cpp  basicInputOutput.h  lroPropagation.cpp  lroPropagation1.1-1.3.cpp  lroPropagation1.4-1.6.cpp  lroPropagation2.1-2.4.cpp  lroPropagation2.5.cpp  missionDefinitions.h
spaceProjectAssignment1/Ephemeris/: CMakeLists.txt  approximatePlanets.cpp  approximatePlanets.h  approximatePlanetsEcliptic.h  ephemerisBase.h  getEphemeris.cpp  getEphemeris.h
spaceProjectAssignment2/: CMakeLists.txt  body.h  spaceProjectLro.cpp  spaceShuttleEntrySimulation.cpp  spaceShuttleEntrySimulation2.cpp  spaceShuttleEntrySimulation22a.cpp  spaceShuttleEntrySimulation22b.cpp  spaceShuttleEntrySimulation22c.cpp  spaceShuttleEntrySimulation22d.cpp  spaceShuttleEntrySimulation22e.cpp  spaceShuttleEntrySimulation23ref.cpp  spaceShuttleEntrySimulationQ3 (1).cpp  spaceShuttleEntrySimulation_Question4.cpp
spaceProjectAssignment2/CMakeModules/: compiler.cmake
